--- a/BUDLENZA/static/styles/style.css
+++ b/BUDLENZA/static/styles/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 
 :root {
   --color-main: #B5E48C;
@@ -291,6 +292,10 @@ a {
   align-items: center;
 }
 
+.header__user p {
+  color: whitesmoke;
+}
+
 .header__logo > img {
   height: 3.2rem;
   width: 3.2rem;
@@ -572,7 +577,7 @@ a {
 .topics__header h2 {
   text-transform: uppercase;
   font-weight: 500;
-  color: var(--color-dark-light);
+  color: #999;
 }
 
 .topics__list {
@@ -638,14 +643,15 @@ a {
 
 .roomList__header h2 {
   text-transform: uppercase;
-  font-weight: 500;
+  font-family: 'Abril Fatface', cursive;
   color: var(--color-light);
-  letter-spacing: 1px;
+  letter-spacing: 6px;
+  font-size: 3rem;
 }
 
 .roomList__header p {
   font-weight: 500;
-  color: var(--color-dark-light);
+  color: #999
 }
 
 /*========== Room List Room ==========*/
@@ -765,18 +771,23 @@ a {
   margin: 1.8rem;
   padding: 1.5rem;
   color: white;
-  /* background-color: #495057; */
+  border: 0.3px solid #495057;
+  /* background-color: #999; */
   border-radius: 1.3rem;
 }
 
+.activities__box:hover{
+  background-color: #495057;
+}
+
 .activities__boxHeader p {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   line-height: 1.3;
 }
 
 .activities__boxHeader p span {
-  color: var(--color-gray);
-  font-size: 1.2rem;
+  color: #fff;
+  font-size: 1rem;
   display: block;
 }
 
@@ -907,6 +918,7 @@ a {
 }
 
 .profile-page .roomList__header h2 {
+  
   color: var(--color-dark-light);
 }
 
