--- a/BUDLENZA/base/templates/base/activity_component.html
+++ b/BUDLENZA/base/templates/base/activity_component.html
@@ -1,5 +1,5 @@
 <!-- {%block content%} -->
-<div class="activities">
+<!-- <div class="activities">
   <div class="activities__header">
     <h2>Recent Activities</h2>
   </div>
@@ -39,7 +39,7 @@
   </div>
 
   {% endfor %}
-</div>
+</div> -->
 
 
 
